--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,3 +1,4 @@
 <form method="post" action="/articles">
-  <input type="text"
+  <input type="text" name="title">
+  <input type="text" name="content">
 </form>
