Automatically backed up by Learn

--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,5 +1,5 @@
 <h1><%= @article.title %></h1>
-<p><%= @article.content %></p>
+<%= @article.content %>
 
 
 <form method="post" action="/articles/<%= @article.id %>">
